[tool.poetry]
name = "our-bot-poetry"
version = "0.1.0"
description = ""
authors = ["HelenNad <htkachenko88@gmail.com>"]
readme = "README.md"
packages = [{include = "our_bot_poetry"}]

[tool.poetry.dependencies]
python = "3.10.4"
requests = "2.28.2"
colorama = "0.4.6"
inquirer = "3.1.3"
prettytable = "3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
